--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "joi": "^13.6.0",
+    "mongoose": "^5.2.17",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
